--- a/index.css
+++ b/index.css
@@ -1,33 +1,49 @@
-body {
+
+  body {
     width: 100vw;
     margin: 0;
     padding: 0;
-}
-
-.background {
-    /* background-color: #003057; */
+  }
+  
+  .background {
+    background-color: #003057;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    }
+  
+  h1 {
+    color: white;
+    font-family: monospace;
+    font-size: 55px;
+    font-weight: bold;
+    margin: 10px 0px 10px 10px;
   }
-
+  
+  nav {
+    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 3px solid black;
+    }
+  
   ul {
     font-family: monospace;
-    /* font-weight: bold; */
+    font-weight: bold;
     list-style: none;
     margin: 10px;
     padding: 0;
     word-spacing: 10px;
     font-size: 30px;
     display: flex;
-}
-
-li {
-    margin-left: 20px;
-    margin-right: 20px;
   }
-
+  
+  li {
+    margin-left: 20px;
+  }
+  
   li :hover {
     color: #2BBFB3;
   }
@@ -39,5 +55,9 @@ li {
   li a {
     text-decoration: none;
     color: white;
+  }
+  
+  .current {
+    color: #2BBFB3;
   }
   
