--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
   }
   
   .background {
-    background-color: #003057;
+    /* background-color: #003057; */
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -14,9 +14,9 @@
     }
   
   h1 {
-    color: white;
+    color: black;
     font-family: monospace;
-    font-size: 55px;
+    /* font-size: 35px; */
     font-weight: bold;
     margin: 10px 0px 10px 10px;
   }
@@ -26,7 +26,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 3px solid black;
+    border-bottom: 5px solid black;
     }
   
   ul {
@@ -36,7 +36,7 @@
     margin: 10px;
     padding: 0;
     word-spacing: 10px;
-    font-size: 30px;
+    /* font-size: 25px; */
     display: flex;
   }
   
