--- a/index.css
+++ b/index.css
@@ -38,6 +38,7 @@
     word-spacing: 10px;
     /* font-size: 25px; */
     display: flex;
+    cursor: pointer;
   }
   
   li {
@@ -61,3 +62,9 @@
     color: #2BBFB3;
   }
   
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
