--- a/index.css
+++ b/index.css
@@ -1,70 +1,78 @@
 
-  body {
-    width: 100vw;
-    margin: 0;
-    padding: 0;
+body {
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
+
+.background {
+  /* background-color: #003057; */
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   }
-  
-  .background {
-    /* background-color: #003057; */
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    }
-  
-  h1 {
-    color: black;
-    font-family: monospace;
-    /* font-size: 35px; */
-    font-weight: bold;
-    margin: 10px 0px 10px 10px;
+
+h1 {
+  color: black;
+  font-family: monospace;
+  /* font-size: 35px; */
+  font-weight: bold;
+  margin: 10px 0px 10px 10px;
+}
+
+nav {
+  width: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 5px solid black;
   }
+
+ul {
+  font-family: monospace;
+  font-weight: bold;
+  list-style: none;
+  margin: 10px;
+  padding: 0;
+  word-spacing: 10px;
+  /* font-size: 25px; */
+  display: flex;
+  cursor: pointer;
+}
   
-  nav {
-    width: 95%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 5px solid black;
-    }
-  
-  ul {
-    font-family: monospace;
-    font-weight: bold;
-    list-style: none;
-    margin: 10px;
-    padding: 0;
-    word-spacing: 10px;
-    /* font-size: 25px; */
-    display: flex;
-    cursor: pointer;
-  }
-  
-  li {
-    margin-left: 20px;
-  }
-  
-  li :hover {
-    color: #2BBFB3;
-  }
-  
-  li :active {
-    color: darkgray;
-  }
-  
-  li a {
-    text-decoration: none;
-    color: black;
-  }
-  
-  .current {
-    color: #2BBFB3;
-  }
-  
-  main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+.whoWeAre {
+  word-spacing: 0px;
+}
+
+.xp {
+  word-spacing: 0px;
+}
+
+li {
+  margin-left: 20px;
+}
+
+li :hover {
+  color: #2BBFB3;
+}
+
+li :active {
+  color: darkgray;
+}
+
+li a {
+  text-decoration: none;
+  color: black;
+}
+
+.current {
+  color: #2BBFB3;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
