--- a/index.css
+++ b/index.css
@@ -1,12 +1,12 @@
 
 body {
+  background-color: gray;
   width: 100vw;
   margin: 0;
   padding: 0;
 }
 
 .background {
-  /* background-color: #003057; */
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -14,9 +14,9 @@ body {
   }
 
 h1 {
-  color: black;
-  font-family: monospace;
-  /* font-size: 35px; */
+  color: white;
+  /* font-family: monospace; */
+  font-size: 35px;
   font-weight: bold;
   margin: 10px 0px 10px 10px;
 }
@@ -26,17 +26,18 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 5px solid black;
+  border-bottom: 5px solid whitesmoke;
   }
 
 ul {
-  font-family: monospace;
+  color: white;
+  /* font-family: monospace; */
   font-weight: bold;
   list-style: none;
   margin: 10px;
   padding: 0;
   word-spacing: 10px;
-  /* font-size: 25px; */
+  font-size: 20px;
   display: flex;
   cursor: pointer;
 }
@@ -54,25 +55,46 @@ li {
 }
 
 li :hover {
-  color: #2BBFB3;
+  color: black;
 }
 
 li :active {
-  color: darkgray;
+  color: lightgray;
 }
 
 li a {
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 .current {
-  color: #2BBFB3;
+  color: black;
 }
 
-main {
-  display: flex;
+#whoWeAre {
+  color: white;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
+  margin-left: 33px;
 }
 
+#experienceProjects {
+  color: white;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+  margin-left: 33px;
+}
+
+#contact {
+  color: white;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+  margin-left: 33px;
+}
+
+img {
+  width: 800px;
+}
