--- a/index.css
+++ b/index.css
@@ -1,12 +1,13 @@
 
 body {
-  background-color: gray;
+  /* background-color: gray; */
   width: 100vw;
   margin: 0;
   padding: 0;
 }
 
 .background {
+  background-color: gray;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -26,7 +27,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 5px solid whitesmoke;
+  /* border-bottom: 5px solid whitesmoke; */
   }
 
 ul {
@@ -72,29 +73,31 @@ li a {
 }
 
 #whoWeAre {
+  background-color: blue;
   color: white;
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  align-items: center; */
-  margin-left: 33px;
+  align-items: center;
+  /* margin-right: 32px;
+  margin-left: 33px; */
 }
 
 #experienceProjects {
+  background-color: pink;
   color: white;
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  align-items: center; */
-  margin-left: 33px;
+  align-items: center;
+  /* margin-right: 32px;
+  margin-left: 33px; */
 }
 
 #contact {
+  background-color: teal;
   color: white;
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  align-items: center; */
-  margin-left: 33px;
-}
-
-img {
-  width: 800px;
+  align-items: center;
+  /* margin-right: 32px;
+  margin-left: 33px; */
 }
