--- a/index.css
+++ b/index.css
@@ -73,8 +73,7 @@ li a {
 }
 
 #whoWeAre {
-  background: black url(./images/wood.jpg) fixed center;
-  color: white;
+  color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -82,8 +81,12 @@ li a {
   margin-left: 33px; */
 }
 
+img {
+  width: 1000px;
+}
+
 #experienceProjects {
-  background-color: pink;
+  background-color: gray;
   color: white;
   display: flex;
   flex-direction: column;
@@ -93,8 +96,7 @@ li a {
 }
 
 #contact {
-  background-color: teal;
-  color: white;
+  color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
