--- a/index.css
+++ b/index.css
@@ -72,6 +72,16 @@ li a {
   color: black;
 }
 
+img {
+  width: 400px;
+}
+
+.wwa {
+  color: black;
+  display: flex;
+  justify-content: center;
+}
+
 #whoWeAre {
   color: black;
   display: flex;
@@ -81,18 +91,52 @@ li a {
   margin-left: 33px; */
 }
 
-img {
-  width: 1000px;
-}
-
 #experienceProjects {
   background-color: gray;
   color: white;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
+  /* margin: 10px 10px 10px 10px; */
   /* margin-right: 32px;
   margin-left: 33px; */
+}
+
+.xp {
+  display: flex;
+  justify-content: center;
+}
+
+h2 {
+  margin-left: 30px;
+  margin-bottom: -5px;
+}
+
+.deckOne{
+  margin: 10px 10px 10px 10px;
+  display: flex;
+  align-items: center;
+}
+
+.deckOneInfo {
+  margin: 0px 30px 0px 30px;
+  font-size: 15px;
+}
+
+.deckTwo {
+  margin: 10px 10px 10px 10px;
+  display: flex;
+  align-items: center;
+}
+
+.deckTwoInfo {
+  margin: 0px 30px 0px 30px;
+}
+
+.con {
+  color: black;
+  display: flex;
+  justify-content: center;
 }
 
 #contact {
@@ -102,4 +146,5 @@ img {
   align-items: center;
   /* margin-right: 32px;
   margin-left: 33px; */
+  margin-bottom: 25px;
 }
